--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 *.iml
 .gradle
+/gradle.properties
+gradle/*
+settings.gradle
+gradlew
+gradlew.bat
+build.gradle
 /local.properties
+.idea
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
